# rust-axum-course

./: README.md
chapter_01/: Cargo.toml
chapter_01/src/: main.rs  routes.rs
chapter_01/src/controllers/: hello_controller.rs
chapter_01/src/models/: mod.rs
chapter_02/: .env  Cargo.toml
chapter_02/src/: errors.rs  main.rs  routes.rs
chapter_02/src/controllers/: hello_controller.rs  redis_controller.rs
chapter_02/src/models/: mod.rs
chapter_03/: Cargo.toml
chapter_03/src/: errors.rs  main.rs  routes.rs
chapter_03/src/controllers/: mod.rs  redis_controller.rs
chapter_03/src/models/: redis_model.rs
